zmiana w opis oraz obsluga zmiana nazwy apki stan bezpieczny

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">EMGsens</string>
-    <string name="hyperlink">Dowiedz się więcej o epilepsji na <a href="https://epilepsja.eu">epilepsja.eu</a></string>
+    <string name="app_name">Ultrasoniczny system bezpieczenstwa</string>
+    <!--<string name="hyperlink">Dowiedz się więcej o epilepsji na <a href="https://epilepsja.eu">epilepsja.eu</a></string>-->
 </resources>
